--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@atlaskit/pragmatic-drag-and-drop-auto-scroll": "^2.1.2",
     "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.2.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/joy": "^5.0.0-beta.52",
     "firebase": "^12.3.0",
     "openai": "^6.2.0",
     "react": "^19.2.0",
